# projeto_dl

./: .gitattributes  .gitignore
Infraestrutura/: .terraform.lock.hcl  airbyte_connection.tf  airbyte_destinations.tf  airbyte_provider.tf  airbyte_resources.tf  airbyte_sources.tf  bi_server.py  duckdb.tf  infra_docker.tf  main.tf  outputs.tf  terrafor.tfvars.example  terraform.tfstate.1769783317.backup  terraform.tfvars  terraform.tfvars.example.txt  variables.tf  versions.tf
Orquestracao/: Dockerfile  airflow_settings.yaml.example.txt  main.py  pyproject.toml  requirements-custom.txt  requirements.txt  uv_requirements.txt
Orquestracao/dags/: processa_documentos.py  processa_documentos2.py
Orquestracao/docling_models/RapidOcr/torch/PP-OCRv4/cls/: ch_ptocr_mobile_v2.0_cls_infer.pth
Orquestracao/docling_models/RapidOcr/torch/PP-OCRv4/det/: ch_PP-OCRv4_det_infer.pth
Orquestracao/docling_models/RapidOcr/torch/PP-OCRv4/rec/: ch_PP-OCRv4_rec_infer.pth
Orquestracao/docling_models/docling-project--CodeFormulaV2/: README.md  added_tokens.json  chat_template.json  config.json  generation_config.json  model.safetensors  special_tokens_map.json  tokenizer_config.json  vocab.json
Orquestracao/docling_models/docling-project--docling-layout-heron/: README.md
Plataforma_dados/: .gitignore  main.py  pyproject.toml  teste_busca_dados.ipynb
